--- a/index.html
+++ b/index.html
@@ -23,11 +23,25 @@
     <script src="scroll.js" defer></script>
     <script src="sidebar.js" defer></script>
 
-     <!-- favicon -->
-     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
-     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png" />
-     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png" />
-     <link rel="manifest" href="assets/favicon/site.webmanifest" />
+    <!-- favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="assets/favicon/site.webmanifest" />
   </head>
   <body>
     <section class="bg-dark-blue">
@@ -80,7 +94,10 @@
             <h1 class="text-grey uppercase letter-spacing-1 fs-400 say-hello">
               say hello
             </h1>
-            <a href="mailto:jayasetiawan28@gmail.com" class="d-block text-dark-blue">
+            <a
+              href="mailto:jayasetiawan28@gmail.com"
+              class="d-block text-dark-blue"
+            >
               jayasetiawan28@gmail.com</a
             >
             <a
@@ -202,7 +219,9 @@
         </p>
         <div class="flex">
           <div class="button-wrapper flex">
-            <a href="https://oncore.netlify.app/about" class="btn uppercase text-grey d-block ff-serif"
+            <a
+              href="https://oncore.netlify.app"
+              class="btn uppercase text-grey d-block ff-serif"
               >live</a
             >
             <a href="#" class="btn uppercase text-grey d-block ff-serif"
@@ -232,7 +251,9 @@
         </p>
         <div class="flex">
           <div class="button-wrapper flex">
-            <a href="https://allure-bracelet.netlify.app/" class="btn uppercase text-grey d-block ff-serif"
+            <a
+              href="https://allure-bracelet.netlify.app/"
+              class="btn uppercase text-grey d-block ff-serif"
               >live</a
             >
             <a href="#" class="btn uppercase text-grey d-block ff-serif"
@@ -264,7 +285,9 @@
         </p>
         <div class="flex">
           <div class="button-wrapper flex">
-            <a href="https://space-tourism-frontmentor.netlify.app/" class="btn uppercase text-grey d-block ff-serif"
+            <a
+              href="https://space-tourism-frontmentor.netlify.app/"
+              class="btn uppercase text-grey d-block ff-serif"
               >live</a
             >
             <a href="#" class="btn uppercase text-grey d-block ff-serif"
@@ -503,7 +526,9 @@
           asperiores eius cupiditate aperiam quaerat explicabo vero?
         </p>
       </article>
-      <a href="mailto:jayasetiawan28@gmail.com" class="btn uppercase text-grey d-block ff-serif"
+      <a
+        href="mailto:jayasetiawan28@gmail.com"
+        class="btn uppercase text-grey d-block ff-serif"
         >get in touch</a
       >
       <img
