updating alt text and images

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
           src="assets/basic shape/Rectangle-2.svg"
           alt=""
         />
-        <img class="ellipse" src="assets/basic shape/Ellipse.svg" alt="" />
-        <img class="Rectangle" src="assets/basic shape/Rectangle.svg" alt="" />
-        <img class="triangle" src="assets/basic shape/triangle.svg" alt="" />
+        <img class="ellipse" src="assets/basic shape/Ellipse.svg" alt="shape-ellipse" />
+        <img class="Rectangle" src="assets/basic shape/Rectangle.svg" alt="shape-rectangular" />
+        <img class="triangle" src="assets/basic shape/triangle.svg" alt="shape-triangle" />
       </div>
     </section>
 
@@ -155,11 +155,11 @@
       </picture>
 
       <picture hidden id="ecommerce-img" class="img-wrapper">
-        <img src="assets/image-moon.png" alt="ecommerce image" />
+        <img src="assets/allure.png" alt="ecommerce image" />
       </picture>
 
       <picture hidden id="space-img" class="img-wrapper">
-        <img src="assets/image-titan.png" alt="" />
+        <img src="assets/image-moon.png" alt="moon image" />
       </picture>
 
       <div
@@ -206,7 +206,7 @@
         role="tabpanel"
       >
         <h2 class="text-grey-dark uppercase ff-serif fs-600 letter-spacing-1">
-          core
+          oncore
         </h2>
         <p class="text-grey">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil amet
@@ -240,7 +240,7 @@
         role="tabpanel"
       >
         <h2 class="text-grey-dark uppercase ff-serif fs-600 letter-spacing-1">
-          ecommerce
+          allure
         </h2>
         <p class="text-grey">
           this is ecommerce pageLorem ipsum dolor sit amet consectetur
@@ -299,22 +299,22 @@
       <img
         class="ellipse-linear-1"
         src="assets/basic shape/Ellipse-linear.svg"
-        alt=""
+        alt="sllipe shape"
       />
       <img
         class="ellipse-linear-2"
         src="assets/basic shape/Ellipse-linear.svg"
-        alt=""
+        alt="ellipse shape"
       />
       <img
         class="ellipse-linear-3"
         src="assets/basic shape/Ellipse-linear.svg"
-        alt=""
+        alt="ellipse shape"
       />
       <img
         class="ellipse-linear-4"
         src="assets/basic shape/Ellipse-linear.svg"
-        alt=""
+        alt="ellipse shape"
       />
     </section>
 
@@ -482,22 +482,22 @@
       <img
         class="triangle-linear-1"
         src="assets/basic shape/triangle-linear.svg"
-        alt=""
+        alt="triangle image"
       />
       <img
         class="triangle-linear-2"
         src="assets/basic shape/triangle-linear.svg"
-        alt=""
+        alt="triangle image"
       />
       <img
         class="triangle-linear-3"
         src="assets/basic shape/triangle-linear.svg"
-        alt=""
+        alt="triangle image"
       />
       <img
         class="triangle-linear-4"
         src="assets/basic shape/triangle-linear.svg"
-        alt=""
+        alt="triangle image"
       />
     </section>
     <!-- About me section  -->
@@ -534,22 +534,22 @@
       <img
         class="rectangular-linear-1"
         src="assets/basic shape/Rectangle-linear.svg"
-        alt=""
+        alt="rectangular image"
       />
       <img
         class="rectangular-linear-2"
         src="assets/basic shape/Rectangle-linear.svg"
-        alt=""
+        alt="rectangular image"
       />
       <img
         class="rectangular-linear-3"
         src="assets/basic shape/Rectangle-linear.svg"
-        alt=""
+        alt="rectangular image"
       />
       <img
         class="rectangular-linear-4"
         src="assets/basic shape/Rectangle-linear.svg"
-        alt=""
+        alt="rectangular image"
       />
     </section>
     <section class="copyright bg-dark-blue">
