Editting about me

--- a/index.html
+++ b/index.html
@@ -119,11 +119,12 @@
         <h1 class="ff-serif">Hi, I am Jaya</h1>
         <h2 class="text-green fs-800">Frontend Developer.</h2>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi libero
-          eligendi at aliquam nam necessitatibus debitis? Obcaecati, aperiam
-          itaque tempore quas vero neque consequuntur aliquid quod laborum
-          nulla? Sed neque tenetur quae fugiat voluptatibus itaque magni? Porro
-          dolore blanditiis ratione.
+          Based in Adelaide, with a knack for both coding and design. Not only
+          can I build cool stuff, but I also prioritize making it look good and
+          user-friendly. My customer service skills ensure I understand what
+          users need and can deliver a great experience. Plus, I'm always
+          excited to dive into web development and learn new things. Let's
+          create awesome stuff together!
         </p>
         <br />
         <img src="assets/line.svg" alt="" />
@@ -132,9 +133,21 @@
           src="assets/basic shape/Rectangle-2.svg"
           alt=""
         />
-        <img class="ellipse" src="assets/basic shape/Ellipse.svg" alt="shape-ellipse" />
-        <img class="Rectangle" src="assets/basic shape/Rectangle.svg" alt="shape-rectangular" />
-        <img class="triangle" src="assets/basic shape/triangle.svg" alt="shape-triangle" />
+        <img
+          class="ellipse"
+          src="assets/basic shape/Ellipse.svg"
+          alt="shape-ellipse"
+        />
+        <img
+          class="Rectangle"
+          src="assets/basic shape/Rectangle.svg"
+          alt="shape-rectangular"
+        />
+        <img
+          class="triangle"
+          src="assets/basic shape/triangle.svg"
+          alt="shape-triangle"
+        />
       </div>
     </section>
 
@@ -510,20 +523,24 @@
       </h1>
       <article>
         <p class="text-grey about-content">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur
-          facilis non modi est assumenda vel officia sapiente unde dignissimos
-          repellendus ducimus, placeat fugiat quisquam at adipisci nobis
-          deleniti natus voluptatum. Corrupti laborum minima fugiat impedit
-          facilis iure suscipit aliquam hic illo! Ipsa minus facere, voluptate
-          rem quisquam facilis.
+          My professional journey began in hospitality as a guest service agent and as a chef.
+          However, the lifestyle didn't resonate with me. Technology has
+          always captivated me since a young age, pushing me to embrace a
+          continuous learning mindset. Eager to acquire new skills, I initiated
+          a self-taught coding journey through Codecademy, Scrimba, and Udemy.
         </p>
         <p class="text-grey about-content">
-          Asperiores id est eius quae vel corrupti repellat dolor aperiam nemo
-          itaque, aliquid inventore rem. Exercitationem sequi facere ipsam. Est
-          quam sapiente distinctio consectetur id dignissimos consequatur!
-          Necessitatibus exercitationem, quod laudantium autem vitae iure
-          nostrum quia maiores dolorem at pariatur commodi a vel quas tenetur
-          asperiores eius cupiditate aperiam quaerat explicabo vero?
+          Taking a bold step, I enrolled in a Certificate IV in IT, specializing
+          in web development at Lumify Learn. While navigating the challenges of
+          independent learning, I found profound satisfaction in the process.
+        </p>
+        <p class="text-grey about-content">
+          I've had a wonderful career in hospitality and culinary arts, where
+          I've learned to work in teams to keep calm under pressure, and how to
+          be a kind human. However, In this short life I'd like to keep learning
+          and evolving. Hence, I'm on the lookout for junior roles where I can
+          put my skills to the test and take over the world, one website or app
+          at a time.
         </p>
       </article>
       <a
