changing some paragraph

--- a/index.html
+++ b/index.html
@@ -222,13 +222,13 @@
           oncore
         </h2>
         <p class="text-grey">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil amet
-          dolores quibusdam neque repellendus nesciunt commodi sunt, enim harum
-          officia, dignissimos, velit beatae! Non, quam? Dolore sint cum
-          voluptatem quisquam blanditiis, quibusdam pariatur accusantium veniam
-          eaque temporibus beatae culpa officia repudiandae accusamus excepturi!
-          Impedit nisi dignissimos et. Enim velit molestias soluta tempora
-          accusantium optio ullam nemo consequatur eos? Ad, id!
+          Inspired by the culinary excellence of Clare Smyth, a chef I deeply
+          admire, I embarked on a project to revamp a website. Using Figma
+          for design and implementing HTML, CSS, and JS for the development, my
+          goal is to create a digital space that pays homage to Clare Smyth while
+          showcasing my proficiency in web development. This website is a
+          testament to my admiration for Smyth's culinary artistry and an
+          opportunity to apply and refine my technical skills in web development.
         </p>
         <div class="flex">
           <div class="button-wrapper flex">
@@ -523,11 +523,12 @@
       </h1>
       <article>
         <p class="text-grey about-content">
-          My professional journey began in hospitality as a guest service agent and as a chef.
-          However, the lifestyle didn't resonate with me. Technology has
-          always captivated me since a young age, pushing me to embrace a
-          continuous learning mindset. Eager to acquire new skills, I initiated
-          a self-taught coding journey through Codecademy, Scrimba, and Udemy.
+          My professional journey began in hospitality as a guest service agent
+          and as a chef. However, the lifestyle didn't resonate with me.
+          Technology has always captivated me since a young age, pushing me to
+          embrace a continuous learning mindset. Eager to acquire new skills, I
+          initiated a self-taught coding journey through Codecademy, Scrimba,
+          and Udemy.
         </p>
         <p class="text-grey about-content">
           Taking a bold step, I enrolled in a Certificate IV in IT, specializing
