updating the text project description

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <h1 class="ff-serif">Hi, I am Jaya</h1>
         <h2 class="text-green fs-800">Frontend Developer.</h2>
         <p>
-          Based in Adelaide, with a knack for both coding and design. Not only
+          Based in Adelaide, with interest in both coding and design. Not only
           can I build cool stuff, but I also prioritize making it look good and
           user-friendly. My customer service skills ensure I understand what
           users need and can deliver a great experience. Plus, I'm always
@@ -223,12 +223,12 @@
         </h2>
         <p class="text-grey">
           Inspired by the culinary excellence of Clare Smyth, a chef I deeply
-          admire, I embarked on a project to revamp a website. Using Figma
-          for design and implementing HTML, CSS, and JS for the development, my
-          goal is to create a digital space that pays homage to Clare Smyth while
-          showcasing my proficiency in web development. This website is a
-          testament to my admiration for Smyth's culinary artistry and an
-          opportunity to apply and refine my technical skills in web development.
+          admire, I created a project to redesign a restaurant website. Using
+          Figma for design and implementing HTML, CSS, and JS for the
+          development, my goal is to create a digital space that pays homage to
+          Clare Smyth while showcasing my learning progress in web development.
+          This website is a testament to my admiration for Clare's culinary
+          artistry and an opportunity to apply and refine my technical skills.
         </p>
         <div class="flex">
           <div class="button-wrapper flex">
@@ -256,11 +256,13 @@
           allure
         </h2>
         <p class="text-grey">
-          this is ecommerce pageLorem ipsum dolor sit amet consectetur
-          adipisicing elit. Maiores consectetur odit distinctio deserunt
-          voluptatibus laboriosam, fugiat cumque totam quisquam ad natus
-          eligendi adipisci atque, architecto harum molestias facere odio
-          corporis.
+          I created this e-commerce project, and it's a bit of a learning
+          journey for me as it is a complex website. The website isn't super
+          fancy, but it's got the basics covered. I'm using plain ol'
+          JavaScript, trying to understand the ropes without relying on those
+          new frameworks. It's a bit challenging, but I'm working on making
+          things interactive. It's all part of the learning process, and I'm
+          taking it one step at a time, bugs and all.
         </p>
         <div class="flex">
           <div class="button-wrapper flex">
@@ -288,13 +290,13 @@
           space tourism
         </h2>
         <p class="text-grey">
-          This is SPACE Lorem ipsum dolor sit, amet consectetur adipisicing
-          elit. Nihil amet dolores quibusdam neque repellendus nesciunt commodi
-          sunt, enim harum officia, dignissimos, velit beatae! Non, quam? Dolore
-          sint cum voluptatem quisquam blanditiis, quibusdam pariatur
-          accusantium veniam eaque temporibus beatae culpa officia repudiandae
-          accusamus excepturi! Impedit nisi dignissimos et. Enim velit molestias
-          soluta tempora accusantium optio ullam nemo consequatur eos? Ad, id!
+          This website project is part of the frontend mentor challange (a
+          platform designed to enhance coding skills through real-world
+          projects), The project involves the creation of an interactive and
+          visually appealing website, utilizing assets provided by Frontend
+          Mentor. Through this hands-on experience, I am improving my skills in
+          HTML, CSS, and JavaScript, gaining practical insights into responsive
+          design, user interface development, and effective coding practices.
         </p>
         <div class="flex">
           <div class="button-wrapper flex">
@@ -526,22 +528,21 @@
           My professional journey began in hospitality as a guest service agent
           and as a chef. However, the lifestyle didn't resonate with me.
           Technology has always captivated me since a young age, pushing me to
-          embrace a continuous learning mindset. Eager to acquire new skills, I
-          initiated a self-taught coding journey through Codecademy, Scrimba,
+          embrace a continuous learning mindset. Wanting to get new skills, I
+          started a self-taught coding journey through Codecademy, Scrimba,
           and Udemy.
         </p>
         <p class="text-grey about-content">
-          Taking a bold step, I enrolled in a Certificate IV in IT, specializing
+          Taking a next step, I enrolled in a Certificate IV in IT, specializing
           in web development at Lumify Learn. While navigating the challenges of
-          independent learning, I found profound satisfaction in the process.
+          independent learning, I found satisfaction in the process.
         </p>
         <p class="text-grey about-content">
           I've had a wonderful career in hospitality and culinary arts, where
           I've learned to work in teams to keep calm under pressure, and how to
           be a kind human. However, In this short life I'd like to keep learning
           and evolving. Hence, I'm on the lookout for junior roles where I can
-          put my skills to the test and take over the world, one website or app
-          at a time.
+          put my skills to the test.
         </p>
       </article>
       <a
