--- a/index.html
+++ b/index.html
@@ -120,11 +120,10 @@
         <h2 class="text-green fs-800">Frontend Developer.</h2>
         <p>
           Based in Adelaide, with interest in both coding and design. Not only
-          can I build cool stuff, but I also prioritize making it look good and
+          can I build cool stuff, but I also make sure it looks good and
           user-friendly. My customer service skills ensure I understand what
           users need and can deliver a great experience. Plus, I'm always
-          excited to dive into web development and learn new things. Let's
-          create awesome stuff together!
+          excited about technology and learn new things. Let's make things happen.
         </p>
         <br />
         <img src="assets/line.svg" alt="" />
@@ -222,7 +221,7 @@
           oncore
         </h2>
         <p class="text-grey">
-          Inspired by the culinary excellence of Clare Smyth, a chef I deeply
+          Inspired by Clare Smyth, a chef I deeply
           admire, I created a project to redesign a restaurant website. Using
           Figma for design and implementing HTML, CSS, and JS for the
           development, my goal is to create a digital space that pays homage to
@@ -490,7 +489,7 @@
         </p>
         <p class="text-grey about-content">
           I've had a wonderful career in hospitality and culinary arts, where
-          I've learned to work in teams to keep calm under pressure, and how to
+          I've learned to work in teams to keep calm under pressure, follow good work ethic, and how to
           be a kind human. However, In this short life I'd like to keep learning
           and evolving. Hence, I'm on the lookout for junior roles where I can
           put my skills to the test.
