update linked in link

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               jayasetiawan28@gmail.com</a
             >
             <a
-              href="#https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"
+              href="www.linkedin.com/in/jaya-setiawan"
               class="d-block text-dark-blue"
               >linkedin</a
             >
