update linked in link 2

--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
             >
               jayasetiawan28@gmail.com</a
             >
-            <a
-              href="www.linkedin.com/in/jaya-setiawan"
+            <a href="https://www.linkedin.com/in/jaya-setiawan/"
               class="d-block text-dark-blue"
               >linkedin</a
             >
